name:                mempool-quickcheck
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mempool-quickcheck-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mempool-quickcheck
  default-language:    Haskell2010

test-suite mempool-quickcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FFI.Mempool
                     , Model.Mempool
  build-depends:       base
                     , mempool-quickcheck
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , array
                     , HUnit
  includes:            mempool.h
  extra-libraries:     data-structures
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
