name:                mempool-quickcheck
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

test-suite mempool-quickcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FFI.Mempool
                     , Model.Mempool
                     , QuickCheck
  build-depends:       base
                     , containers
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , array
                     , HUnit
  includes:            mempool.h
  extra-libraries:     data-structures
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  default-language:    Haskell2010
